--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "// configurations": "",
         "config":{
             "// basic settings": "",
-                "quick_test":true,
+                "quick_test":false,
                 "max_epochs":30,
                 "num_bin_data":500,
                 "batch_size": 100,
