--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-awkward==2.4.6
+awkward==2.5.1
 fastjet==3.4.0.7
 h5py==3.9.0
 lightning==2.0.2
 matplotlib==3.7.1
 numpy==1.23.5
-PennyLane==0.30.0
+pandas==2.0.1
+PennyLane==0.33.1
 scikit_learn==1.2.2
+seaborn==0.13.0
 torch==2.0.1+cu118
 torch_geometric==2.3.1
-uproot==5.1.2
+tqdm==4.65.0
+uproot==5.2.0
 wandb==0.15.3
