--- a/.gitignore
+++ b/.gitignore
@@ -2,32 +2,20 @@
 .DS_Store
 __pycache__/
 _*
-log_*
 a.py
 
 # training result
-wandb/
-result/
-lightning_logs/
-tmux_log/
-QCGNN_result/
-QCGNN_ckpt/
-ckpt/
-csv/
-pretrain/
 pred_outputs/
 pretrain_ckpt/
+training_logs/
 
 # data
-data/
 jet_dataset/
 *.root
 *.hdf5
 
 # slurm
-slurm_out
 slurm*
 
 # pennylane-qiskit plugin
 config.toml
-ibmq/
