--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pandas==2.0.1
 PennyLane==0.33.1
 scikit_learn==1.2.2
 seaborn==0.13.1
-torch==2.0.1+cu118
+# torch==2.0.1+cu118
 torch_geometric==2.3.1
 tqdm==4.65.0
 uproot==5.2.1
