--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
     "// basic settings": "",
-        "quick_test": true,
+        "quick_test": false,
         "max_epochs": 30,
         "num_bin_data": 500,
-        "batch_size": 100,
+        "batch_size": 50,
         "quantum_config": "pennylane_config",
         "computing_platform": "",
     
     "// dataset settings": "",
         "input_dim": 6,
         "data_ratio": 0.8,
-        "pt_threshold": 50,
+        "pt_threshold": 0.05,
         "max_num_ptcs": 16,
     
     "// pytorch lightning trainer": "",
@@ -20,9 +20,9 @@
         "log_every_n_steps": 50,
     
     "// wandb settings (optional)": "",
-        "use_wandb": false,
+        "use_wandb": true,
         "wandb_account": "ntuyianchen",
-        "wandb_project": "g_fast",
+        "wandb_project": "g_var",
     
     "// output directories": "",
         "dataset_dir": "./jet_dataset",
@@ -31,7 +31,7 @@
         "predictions_dir": "./pred_outputs",
     
     "// re-training for classical shallow models": "",
-        "retrain": false,
+        "retrain": true,
         "retrain_cycle": 10,
         "retrain_threshold": 0.6
 }
