--- a/config.json
+++ b/config.json
@@ -1,11 +1,12 @@
 {
     "// basic settings": "",
-        "quick_test": false,
+        "quick_test": true,
         "max_epochs": 30,
         "num_bin_data": 500,
         "batch_size": 50,
         "quantum_config": "pennylane_config",
         "computing_platform": "",
+        "aggregation": "SUM",
     
     "// dataset settings": "",
         "input_dim": 6,
@@ -20,7 +21,7 @@
         "log_every_n_steps": 50,
     
     "// wandb settings (optional)": "",
-        "use_wandb": true,
+        "use_wandb": false,
         "wandb_account": "ntuyianchen",
         "wandb_project": "g_var",
     
