--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "// basic settings": "",
-        "quick_test": true,
+        "quick_test": false,
         "max_epochs": 30,
         "num_bin_data": 500,
         "batch_size": 50,
@@ -21,7 +21,7 @@
         "log_every_n_steps": 50,
     
     "// wandb settings (optional)": "",
-        "use_wandb": false,
+        "use_wandb": true,
         "wandb_account": "ntuyianchen",
         "wandb_project": "g_var",
     
