--- a/configs/test_config.yaml
+++ b/configs/test_config.yaml
@@ -1,32 +1,34 @@
-# Configurations for testing codes.
+# Configurations used in `main.ipynb` (or `main.py`)
 
 Settings:
-  mode: '110'         # Stands for ('train', 'valid', 'test').
-  use_wandb: false    # Whether using wandb to monitor training procedure.
-  suffix: ''          # Suffix description of this training.
-  print_log: false    # Whether print logs during training.
-
-
-Data:
-  num_train: 10000        # Number of training data per channel.
-  num_valid: 10000         # Number of validation data per channel.
-  num_test: 1000          # Number of testing data per channel.
-  batch_size: 512         # Batch size.
-  pt_min: 800             # Minimum of jet pt.
-  pt_max: 1000            # Maximum of jet pt.
-  pt_threshold: 0.05         # Percentage of daughter pt to jet pt threshold.
-  max_num_ptcs: 16        # Maximum number of particles per jet.
-  num_bins: 10            # Number of bins in pt range.
-  num_ptcs_range: null    # Range of number of particles per jet.
-
+  mode: '111'         # Stands for ('train', 'valid', 'test').
+  use_wandb: false     # Whether using wandb to monitor training procedure.
+  print_log: true     # Whether print logs during training.
+  suffix: 'test'     # Suffix description of this training.
 
 Train:
-  max_epochs: 30           # Maximum number of epochs.
+  max_epochs: 1           # Maximum number of epochs.
   lr: 1e-3                 # Learning rate.
-  log_every_n_steps: 50    # Log every n steps, will affect `training_steps`.
+  log_every_n_steps: 50    # Log every n steps.
   num_sanity_val_steps: 0  # To avoid calculating AUC for single class.
 
+Data:
+  num_train: 50        # Number of training data per channel.
+  num_valid: 50         # Number of validation data per channel.
+  num_test: 50          # Number of testing data per channel.
+  batch_size: 4          # Batch size.
+  pt_threshold: 0.025     # Percentage of daughter pt to jet pt threshold.
+  min_num_ptcs: 4         # Minimum number of particles per jet.
+  max_num_ptcs: 16        # Maximum number of particles per jet.
+  
+TopQCD:
+  dataset: 'TopQCD'       # Dataset name.
+  num_classes: 2          # Number of classes.
+  pt_min: 550             # Minimum of jet pt.
+  pt_max: 650             # Maximum of jet pt.
 
-Model:
-  aggregation: 'add'  # Aggregation method.
-  score_dim: 3        # Dimension of output (score).
+JetNet:
+  dataset: 'JetNet'       # Dataset name.
+  num_classes: 5          # Number of classes.
+  pt_min: 800             # Minimum of jet pt.
+  pt_max: 1200            # Maximum of jet pt.
