--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ _*
 a.py
 b.py
 run.sh
+main_C.py
+main_Q.py
 
 # large data
 dataset/
@@ -25,5 +27,5 @@ wandb.yaml
 wandb.ipynb
 
 # training result
-result/
+ibmq_result/
 training_logs/
